font size and z-index fixed

--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   position: fixed;
-  z-index: 2;
+  z-index: 7;
   top: 70px;
 }
 
