--- a/src/styles/word-card.css
+++ b/src/styles/word-card.css
@@ -3,6 +3,7 @@
   padding: 10px;
   display: grid;
   background-color: rgb(252, 252, 252) !important;
+  z-index:5;
 }
 
 .card-header {
